# hapi-api

./: .cz.toml  .gitignore  .pylintrc  Makefile  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
config/: environment.yml  iam.yml
src/adapters/properties/: __init__.py  properties.py
src/commons/context/: __init__.py  context.py
src/commons/errors/: __init__.py  bad_request_error.py  data_conflict_error.py  forbidden_error.py  handler_error.py  internal_error.py  not_found_error.py  schema_error.py  service_unavailable.py  unauthorized_error.py  unprocessable_entity_error.py
src/commons/http/: __init__.py  http.py
src/commons/logging/: __init__.py  logging.py
src/commons/middlewares/request/: __init__.py  request.py
src/commons/types/: __init__.py  types.py
src/commons/utils/: __init__.py  utils.py
src/handlers/: properties.py
src/helpers/properties/: __init__.py  properties.py
src/models/: __init__.py  property.py
src/models/types/: __init__.py  types.py
src/ports/repositories/: __init__.py  properties_repository.py
src/routes/: properties.py
tests/: mock_spec.py
